--- a/index.html
+++ b/index.html
@@ -262,7 +262,116 @@
     </div>
   </div>
   <div class="port-right">
-    <h1 style="color: var(--accent2);">LATEST WORK</h1>
+    <h1 style="color: var(--accent2);">ESRI Cartograohy MOOC 2024</h1>
+      <p>Check out my latest work in remote sensing and GIS.</p>
+    <div class="button_buffer">
+      <a href="portfolio.html" class="button_blk">More Projects</a>
+    </div>
+  </div>
+  </div>
+  </div>
+   <!--- Section 4: Recent Work in Grid format --->
+  <div class="grid_background_col">
+  <div class="port_cont">
+    <div class="port-left">
+    <div class="grid_title_txt"></div>
+      <div class="homepage_sect2_cont">
+      <div class="row">
+      <!-- <div class="column">
+        <a href="projects/NASA-DEVELOP-PUP-Projects.html" target="">
+          <div class="container">
+            <img data-src="./images/2022Spring_PUP_UHEATUrban_WebsiteImage_v2.png" class="image">
+            <div class="overlay">
+              <div class="grid_text">NASA DEVELOP PUP Projects</div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="column">
+        <a href="projects/NASA-DEVELOP-CentralAmericaDisasters.html" target="">
+          <div class="container">
+            <img data-src="./images/2021Fall_MSFC_CentralAmericaDisasters_WebsiteImage_mycopy.jpg" class="image">
+            <div class="overlay">
+              <div class="grid_text">NASA DEVELOP Central America Disasters</div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="column">
+        <a href="projects/NASA-DEVELOP-ArgentinaAg.html" target="">
+          <div class="container">
+            <img data-src="./images/2021Sum_GSFC_ArgentinaAg_WebsiteImage.jpg" class="image">
+            <div class="overlay">
+              <div class="grid_text">NASA DEVELOP Argentina Agriculture</div>
+            </div>
+          </div>
+        </a>
+      </div> -->
+      <div class="column">
+        <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
+          <div class="container">
+            <img data-src="ESRI_CartographyMOOC_2024/Hurricanes.png" class="image">
+            <div class="overlay">
+              <div class="grid_text">Mapping Hurricanes Since 1700s using ArcGIS Pro</div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="column">
+        <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
+          <div class="container">
+            <img data-src="ESRI_CartographyMOOC_2024/Small Multiple Layout.pdf" class="image">
+            <div class="overlay">
+              <div class="grid_text">Mapping Earthquakes using ArcGIS Pro</div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="column">
+        <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
+          <div class="container">
+            <img data-src="ESRI_CartographyMOOC_2024/Spilhaus_Layout_Steph_Willsey.jpg" class="image">
+            <div class="overlay">
+              <div class="grid_text">Mapping Earth's Ocean using ArcGIS Pro</div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="column">
+        <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
+          <div class="container">
+            <img data-src="ESRI_CartographyMOOC_2024/ShipRace.mp4" class="image">
+            <div class="overlay">
+              <div class="grid_text">Creating GIFs using Shipping Records from the 1700s in ArcGIS Pro</div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="column">
+        <a href="Projects/SDM_Eastern_Hemlock_Web_Application.html" target="">
+          <div class="container">
+            <img data-src="./images/SDM2_layer_crop.jpg" class="image">
+            <div class="overlay">
+              <div class="grid_text">Eastern Hemlock Species Distribution Model Web Map</div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="column">
+        <a href="Projects/Electric_Vehicle_Spatial_Analysis.html" target="">
+          <div class="container">
+            <img data-src="./images/ny_fig2_crop.jpg" class="image">
+            <div class="overlay">
+              <div class="grid_text">Electric Vehicle Spatial Analysis with R</div>
+            </div>
+          </div>
+        </a>
+      </div>
+      </div>
+    </div>
+  </div>
+  <div class="port-right">
+    <h1 style="color: var(--accent2);">Academic Work</h1>
       <p>Check out my latest work in remote sensing and GIS.</p>
     <div class="button_buffer">
       <a href="portfolio.html" class="button_blk">More Projects</a>
@@ -281,7 +390,7 @@
     </div>
     </div>
   </div> -->
-  <!--- Section 4: Contact Information --->
+  <!--- Section 5: Contact Information --->
   <div class="about_me_interests_cont_pg2">
     <div class="about_me_interests_pg2">
       <br>
