--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="homepage">
   <div class="homepage_container">
-    <div class="homepage_left">
+    <div class="homepage_right">
       <div class="homepage_text_cont">
         <h1 style="opacity: 100%;">Stephanie Willsey</h1>
         <div class="homepage_text">
