--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     </div>
   </div>
   <div class="port-right">
-    <h1 style="color: var(--accent2);">ESRI Cartograohy MOOC 2024</h1>
+    <h1 style="color: var(--accent2);">ESRI Cartography MOOC 2024</h1>
       <p>Check out my latest work in remote sensing and GIS.</p>
     <div class="button_buffer">
       <a href="portfolio.html" class="button_blk">More Projects</a>
