--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="homepage">
   <div class="homepage_container">
-    <div class="homepage_right">
+    <div class="homepage_left">
       <div class="homepage_text_cont">
         <h1 style="opacity: 100%;">Stephanie Willsey</h1>
         <div class="homepage_text">
@@ -37,7 +37,7 @@
         <a href="portfolio.html" class="button">Recent Work</a>
       </div>
     </div>
-    <div class="homepage_left">
+    <div class="homepage_right">
         <!-- First Image -->
         <img src="Styles/Images/Gulf_hagas.jpg" class="homepage_image">
     </div>
@@ -51,7 +51,7 @@
       <div class="grid_background_col">
           <div class="desktop">
     <div class="about_cont">
-      <div class="about-right">
+      <div class="about-left">
       <img src="Images/SWillsey_2023_headshot.jpg" class="about-image">
         <!-- <div class="border-line"></div> -->
       </div>
