--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           </div>
         </a>
       </div>
-      <div class="column">
+      <!-- <div class="column">
         <a href="Projects/SDM_Eastern_Hemlock_Web_Application.html" target="">
           <div class="container">
             <img data-src="./images/SDM2_layer_crop.jpg" class="image">
@@ -260,7 +260,7 @@
       </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="port-right">
     <h1 style="color: var(--accent2);">ESRI Cartography MOOC 2024</h1>
       <p>Check out my latest work in remote sensing and GIS.</p>
@@ -347,7 +347,7 @@
           </div>
         </a>
       </div>
-      <div class="column">
+       <!-- <div class="column">
         <a href="Projects/SDM_Eastern_Hemlock_Web_Application.html" target="">
           <div class="container">
             <img data-src="./images/SDM2_layer_crop.jpg" class="image">
@@ -369,7 +369,7 @@
       </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="port-right">
     <h1 style="color: var(--accent2);">Academic Work</h1>
       <p>Check out my latest work in remote sensing and GIS.</p>
