--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       </a>
     </div>
   </nav>
+  <!-- Banner Image Section -->
+  <div id="banner"></div>
   <!--- Section 1: Home Page and Call to Action --->
   <div style="background-color: var(--main)">
   <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
