--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           </div>
         </a>
       </div>
-      <!-- <div class="column">
+      <div class="column">
         <a href="Projects/SDM_Eastern_Hemlock_Web_Application.html" target="">
           <div class="container">
             <img data-src="./images/SDM2_layer_crop.jpg" class="image">
@@ -262,7 +262,7 @@
       </div>
       </div>
     </div>
-  </div> -->
+  </div> 
   <div class="port-right">
     <h1 style="color: var(--accent2);">ESRI Cartography MOOC 2024</h1>
       <p>Check out my latest work in remote sensing and GIS.</p>
@@ -349,7 +349,7 @@
           </div>
         </a>
       </div>
-       <!-- <div class="column">
+       <div class="column">
         <a href="Projects/SDM_Eastern_Hemlock_Web_Application.html" target="">
           <div class="container">
             <img data-src="./images/SDM2_layer_crop.jpg" class="image">
@@ -371,7 +371,7 @@
       </div>
       </div>
     </div>
-  </div> -->
+  </div>
   <div class="port-right">
     <h1 style="color: var(--accent2);">Academic Work</h1>
       <p>Check out my latest work in remote sensing and GIS.</p>
