--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
           <div class="homepage_right">
           <!-- First Image -->
-            <img src="Styles/Images/Gulf_hagas.jpg" class="homepage_image">
+            <img src="Styles/Images/NASA_HQ_EarthDay_2024.png" class="homepage_image">
           </div>
         </div>
       </div>
