--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <div class="column">
           <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
             <div class="container">
-              <img data-src="ESRI_CartographyMOOC_2024/Small Multiple Layout.pdf" class="image">
+              <img data-src="ESRI_CartographyMOOC_2024/Small Multiple Layout.jpeg" class="image">
               <div class="overlay">
                 <div class="grid_text">Mapping Earthquakes using ArcGIS Pro</div>
               </div>
@@ -240,7 +240,7 @@
         <div class="column">
           <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
             <div class="container">
-              <img data-src="ESRI_CartographyMOOC_2024/ShipRace.mp4" class="image">
+              <img data-src="ESRI_CartographyMOOC_2024/ShipRace.mp4" class="video/mp4">
               <div class="overlay">
                 <div class="grid_text">Creating GIFs using Shipping Records from the 1700s in ArcGIS Pro</div>
               </div>
@@ -308,7 +308,7 @@
           <div class="column">
             <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
               <div class="container">
-                <img data-src="ESRI_CartographyMOOC_2024/Small Multiple Layout.pdf" class="image">
+                <img data-src="ESRI_CartographyMOOC_2024/Small Multiple Layout.jpeg" class="image">
                 <div class="overlay">
                   <div class="grid_text">Mapping Earthquakes using ArcGIS Pro</div>
                 </div>
@@ -328,7 +328,7 @@
           <div class="column">
             <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
               <div class="container">
-                <img data-src="ESRI_CartographyMOOC_2024/ShipRace.mp4" class="image">
+                <img data-src="ESRI_CartographyMOOC_2024/ShipRace.mp4" class="video/mp4">
                 <div class="overlay">
                   <div class="grid_text">Creating GIFs using Shipping Records from the 1700s in ArcGIS Pro</div>
                 </div>
