--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
   <div class="grid_background_col2">
       <div class="about_me_center">
         <img class="me_image" src="./Images/SWillsey_2023_headshot.jpg" alt=""></img>
-          <p style="padding-right: 2.5%; padding-left:2.5%;">As of May 2024, I am a graduate research assistant at Purdue University pursuing a PhD in forestry. Previously, I was the center lead at the Goddard Space Flight Center in Maryland for the NASA DEVELOP National Program. I supervised teams and developed projects using NASA Earth observations to address environmental issues. Before becoming the GSFC center lead, I participated for two terms virtually at the CO node in the Spring of 2023 on an agriculture project assessing the drivers of production on the Western Slopes of the Rockies and at the PUP node in the Summer of 2023 on an ecological forecasting project assessing avoided soil carbon loss via conservation easements in New York.
-          <br></br> I graduated from Indiana University with a Bachelor of Arts in Psychology and minors in Counseling and Philosophy of Mind and Cognition in 2017. In 2019, I pursued my passion for forestry at the University of Maine, where I earned both a Master of Forestry and a Master of Science in Forest Resources.
+          <p style="padding-right: 2.5%; padding-left:2.5%;">I am currently a graduate research assistant at Purdue University, working towards a PhD in forestry. Previously, I served as the center lead at the NASA DEVELOP National Program located at the Goddard Space Flight Center in Maryland. In this role, I oversaw teams and spearheaded projects utilizing NASA Earth observations to address environmental challenges.Before assuming the position of center lead, I participated in two terms as a virtual team member. In the Spring of 2023, I contributed to an agriculture project at the CO node, focusing on analyzing production drivers in the Western Slopes of the Southern Rockies. Subsequently, during the Summer of 2023, I collaborated on an ecological forecasting project at the PUP node, evaluating the impact of conservation easements on soil carbon preservation in New York.
+          <br></br> I earned my Bachelor of Arts in Psychology from Indiana University in 2017, with minors in Counseling and Philosophy of Mind and Cognition. Building on my academic foundation, I pursued my passion for forestry at the University of Maine, where I obtained both a Master of Forestry and a Master of Science in Forest Resources in 2021 and 2023, respectively.
           </p>
       </div>
         </div>
@@ -70,16 +70,16 @@
             <ul>
               <!-- Article 1 -->
               <li>
-                <a class="featured" href="https://appliedsciences.nasa.gov/our-impact/news/nasa-develop-25-years-science-serving-society" target="_blank">
-                <b>In NASA Applied Sciences August 2nd, 2023</b>
-                <p>NASA DEVELOP: 25 Years of Science Serving Society</p>
+                <a class="featured" href="https://wheatlandlab.org/people/stephanie-willsey/ target="_blank">
+                <b>Barbara Wheatland Geospatial Lab Biography</b>
+                <p>University of Maine</p>
                 </a>
               </li>
               <!-- Article 2 -->
               <li>
-                <a class="featured" href="https://doi.org/10.1016/j.horiz.2022.100039" target="_blank">
-                <b>In Sustainable Horizons October, 2022</b>
-                <p>Leveraging remotely-sensed vegetation indices to evaluate crop coefficients and actual irrigation requirements in the water-stressed Maipo River Basin of Central Chile</p>
+                <a class="featured" href="https://ag.purdue.edu/directory/swillsey" target="_blank">
+                <b>Digital Forestry Lab</b>
+                <p>Purdue University Contact Information</p>
                 </a>
               </li>
               <!-- Article 3 -->
