--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
             <ul>
               <!-- Article 1 -->
               <li>
-                <a class="featured" href="https://wheatlandlab.org/people/stephanie-willsey/ target="_blank">
+                <a class="featured" href="https://wheatlandlab.org/people/stephanie-willsey/" target="_blank">
                 <b>Barbara Wheatland Geospatial Lab Biography</b>
                 <p>University of Maine</p>
                 </a>
@@ -78,7 +78,7 @@
               <!-- Article 2 -->
               <li>
                 <a class="featured" href="https://ag.purdue.edu/directory/swillsey" target="_blank">
-                <b>Digital Forestry Lab</b>
+                <b>Department of Forestry & Natural Resources</b>
                 <p>Purdue University Contact Information</p>
                 </a>
               </li>
