--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <div class="column">
           <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
             <div class="container">
-              <img data-src="ESRI_CartographyMOOC_2024/Small Multiple Layout.jpeg" class="image">
+              <img data-src="ESRI_CartographyMOOC_2024/Small Multiple Layout.jpg" class="image">
               <div class="overlay">
                 <div class="grid_text">Mapping Earthquakes using ArcGIS Pro</div>
               </div>
@@ -248,12 +248,12 @@
           </a>
         </div>
         <div class="column">
-          <a href="Projects/SDM_Eastern_Hemlock_Web_Application.html" target="">
-            <div class="container">
-              <img data-src="./images/SDM2_layer_crop.jpg" class="image">
-              <div class="overlay">
-                <div class="grid_text">Eastern Hemlock Species Distribution Model Web Map</div>
-              </div>
+         <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
+              <div class="container">
+                <img data-src="ESRI_CartographyMOOC_2024/ShippingIn1770.mp4" class="video/mp4">
+                <div class="overlay">
+                  <div class="grid_text">Creating GIFs using Shipping Records from the 1700s in ArcGIS Pro Part 2</div>
+                </div>
             </div>
           </a>
         </div>
@@ -308,7 +308,7 @@
           <div class="column">
             <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
               <div class="container">
-                <img data-src="ESRI_CartographyMOOC_2024/Small Multiple Layout.jpeg" class="image">
+                <img data-src="ESRI_CartographyMOOC_2024/Small Multiple Layout.jpg" class="image">
                 <div class="overlay">
                   <div class="grid_text">Mapping Earthquakes using ArcGIS Pro</div>
                 </div>
@@ -336,11 +336,11 @@
             </a>
           </div>
           <div class="column">
-            <a href="Projects/SDM_Eastern_Hemlock_Web_Application.html" target="">
+            <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
               <div class="container">
-                <img data-src="./images/SDM2_layer_crop.jpg" class="image">
+                <img data-src="ESRI_CartographyMOOC_2024/ShippingIn1770.mp4" class="video/mp4">
                 <div class="overlay">
-                  <div class="grid_text">Eastern Hemlock Species Distribution Model Web Map</div>
+                  <div class="grid_text">Creating GIFs using Shipping Records from the 1700s in ArcGIS Pro Part 2</div>
                 </div>
               </div>
             </a>
