--- a/Projects/ESRI_MOOC_Hurricanes.html
+++ b/Projects/ESRI_MOOC_Hurricanes.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Caroline Williams | Central America Disasters</title>
+    <title>Stephanie Willsey | Mapping Hurricanes Since the 1851</title>
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -13,7 +13,6 @@
     <div class="navbar" id="mynavbar">
       <a href="../index.html">HOME</a>
       <a href="../about.html">ABOUT ME</a>
-      <a href="../resume.html">RESUME</a>
       <a href="../portfolio.html" class="active">PORTFOLIO</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -34,15 +33,15 @@
     <div class="desktop">
       <div class="about_cont">
         <div class="about-left">
-          <img src="../images/2021Fall_MSFC_CentralAmericaDisasters_WebsiteImage_mycopy.jpg" class="project-image">
+          <img src="ESRI_CartographyMOOC_2024/Hurricanes.png" class="project-image">
         </div>
         <div class="about-right">
           <div class="about-text">
-            <h2 style="text-align:center; padding-bottom: 5px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Central America Disasters Fall 2021 Project</h2>
-            <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Using Earth Observations to Map Flooding for Disaster Monitoring, Inform Potential Risk, and Prepare for Possible Response</i></h3>
+            <h2 style="text-align:center; padding-bottom: 5px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">ESRI Cartography MOOC 2024 Project</h2>
+            <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Using Earth Observations and Qualitative Data to Map Global Hurricanes Since 1851</i></h3>
           </div>
           <div class="button_buffer">
-            <a class="button_blk" href="https://appliedsciences.nasa.gov/what-we-do/projects/using-earth-observations-map-flooding-disaster-monitoring-inform-potential-risk">Project on NASA Applied Sciences</a>
+            <a class="button_blk" href="https://www.esri.com/arcgis-blog/products/arcgis-living-atlas/mapping/how-to-make-this-crazy-map-of-hurricanes-since-1851/">Project on ESRI Credit: John Nelson</a>
           </div>
         </div>
       </div>
@@ -53,15 +52,15 @@
     <div class="tablet_device_1000px">
       <div class="project_tablet_cont">
         <div class="project-tablet-left">
-          <img src="../images/2021Fall_MSFC_CentralAmericaDisasters_WebsiteImage_mycopy.jpg" class="project-tablet-image">
+          <img src="ESRI_CartographyMOOC_2024/Hurricanes.png" class="project-tablet-image">
         </div>
         <div class="project-tablet-right">
           <div class="project-tablet-text">
             <h2 style="text-align:center; padding-bottom: 15px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Central America Disasters Fall 2021 Project</h2>
-            <h3 class="highlight-subtitle" style="font-weight:normal;"><i>Using Earth Observations to Map Flooding for Disaster Monitoring, Inform Potential Risk, and Prepare for Possible Response</i></h3><br>
+            <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Using Earth Observations and Qualitative Data to Map Global Hurricanes Since 1851</i></h3>
           </div>
           <div class="button_buffer">
-            <a class="button_blk" href="https://appliedsciences.nasa.gov/what-we-do/projects/using-earth-observations-map-flooding-disaster-monitoring-inform-potential-risk">Project on NASA Applied Sciences</a>
+            <a class="button_blk" href="https://www.esri.com/arcgis-blog/products/arcgis-living-atlas/mapping/how-to-make-this-crazy-map-of-hurricanes-since-1851/">Project on ESRI Credit: John Nelson</a>
           </div>
         </div>
       </div>
@@ -77,39 +76,19 @@
         <div class="about_cont">
           <div class="about-left">
             <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Team Members:</b></p>
-              <p>Caroline Williams (Project Lead)</p>
-              <p>Lauren Carey</p>
-              <p>Maria De Los Santos</P>
-              <p>Deanna Fanelli</p>
-              <p>Payton Ireland</P>
-            </div>
-            <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Fellow/Center Lead:</b></p>
-              <p>Paxton LaJoie</p>
+              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Student:</b></p>
+              <p>Stephanie Willsey</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Affiliation:</b></p>
-              <p>NASA DEVELOP National Program</p>
+              <p>ESRI</p>
             </div>
           </div>
           <div class="about-right">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Advisors:</b></p>
-              <p>Kel Markert (NASA SERVIR Science Coordination Office)</p>
-              <p>Eric Anderson (NASA SERVIR Science Coordination Office)</p>
-              <p>Betzy Hernández (NASA SERVIR Science Coordination Office)</p>
-              <p>Dr. Emil Cherrington (NASA SERVIR Science Coordination Office)</p>
-              <p>Vanesa Martin (NASA SERVIR Science Coordination Office)</p>
-              <p>Ronan Lucey (NASA Applied Sciences Disasters Program)</p>
-              <p>Dr. Robert Griffin (University of Alabama Huntsville)</p>
-              <p>Dr. Jeffrey Luvall (NASA Marshall Space Flight Center)</p>
-            </div>
-            <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Partners:</b></p>
-              <p>Comité Regional de Recursos Hidráulicos (CRRH)</p>
-              <p>Centro de Coordinación para la Prevención de los Desastres en América Central y República Dominicana (CEPREDENAC)</p>
-              <p>Sistema de la Integración Centroamericana (SICA)</p>
+              <p>Ken Field (Esri)</p>
+              <p>John Nelson (ESRI)</p>
             </div>
           </div>
         </div>
@@ -125,74 +104,24 @@
         <div class="about_tablet_cont">
           <div class="about-tablet-left">
             <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Team Members:</b></p>
-              <p>Caroline Williams (Project Lead)</p>
-              <p>Lauren Carey</p>
-              <p>Maria De Los Santos</P>
-              <p>Deanna Fanelli</p>
-              <p>Payton Ireland</P>
-            </div>
-            <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Fellow/Center Lead:</b></p>
-              <p>Paxton LaJoie</p>
+              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Student:</b></p>
+              <p>Stephanie Willsey</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Affiliation:</b></p>
-              <p>NASA DEVELOP National Program</p>
+              <p>ESRI</p>
             </div>
           </div>
-          <div class="about-tablet-right">
+          <div class="about-right">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Advisors:</b></p>
-              <p>Kel Markert (NASA SERVIR Science Coordination Office)</p>
-              <p>Eric Anderson (NASA SERVIR Science Coordination Office)</p>
-              <p>Betzy Hernández (NASA SERVIR Science Coordination Office)</p>
-              <p>Dr. Emil Cherrington (NASA SERVIR Science Coordination Office)</p>
-              <p>Vanesa Martin (NASA SERVIR Science Coordination Office)</p>
-              <p>Ronan Lucey (NASA Applied Sciences Disasters Program)</p>
-              <p>Dr. Robert Griffin (University of Alabama Huntsville)</p>
-              <p>Dr. Jeffrey Luvall (NASA Marshall Space Flight Center)</p>
-            </div>
-            <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Partners:</b></p>
-              <p>Comité Regional de Recursos Hidráulicos (CRRH)</p>
-              <p>Centro de Coordinación para la Prevención de los Desastres en América Central y República Dominicana (CEPREDENAC)</p>
-              <p>Sistema de la Integración Centroamericana (SICA)</p>
+              <p>Ken Field (Esri)</p>
+              <p>John Nelson (ESRI)</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- Section 4: Project Abstract & Deliverables -->
-  <div style="background-color: var(--alternative)">
-  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
-  <div class="grid_background_col2">
-    <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Abstract:</b></p>
-    <p style="padding-bottom: 20px;">In November 2020, Hurricanes Eta and Iota hit Central America within weeks of each other, causing severe flooding, landslides, and widespread damage. NASA DEVELOP partnered with Comité Regional de Recursos Hidráulicos (CRRH), Centro de Coordinación para la Prevención de los Desastres en América Central y República Dominicana (CEPREDENAC), and Sistema de la Integración Centroamericana (SICA) to better understand how flooding throughout Central America has impacted and will continue to affect communities, focusing on sites in Guatemala, Honduras, El Salvador, Belize, Nicaragua, western Panama, and eastern Costa Rica from January 2015 to October 2021. The team utilized surface reflectance data from Landsat 7 Enhanced Thematic Mapper Plus (ETM+), Landsat 8 Operational Land Imager (OLI), Sentinel-2 MultiSpectral Instrument (MSI), Suomi National Polar-orbiting Partnership (NPP) Visible Infrared Imaging Radiometer Suite (VIIRS), and Terra Moderate Resolution Imaging Spectroradiometer (MODIS). This project also utilized backscatter data from Sentinel-1 C-band Synthetic Aperture Radar (C-SAR) and elevation data from the Shuttle Radar Topography Mission (SRTM). Incorporating these Earth observations in NASA SERVIR’s Hydrologic Remote Sensing Analysis for Floods (HYDRAFloods) tool run on Google Earth Engine (GEE), the team produced historical surface water maps, a case study analysis of the two hurricanes, and a code tutorial. These results indicated that surface water increased in priority sites from 2015 to 2021, optical and SAR imagery detected similar flood patterns and extent after the hurricanes, and rainfall was concentrated on the east coast of the region. These products allow partners to make informed decisions around flooding preparation and disaster mitigation.
-    </p>
-    <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Project Deliverables:</b></p>
-    <div class="homepage_sect2_cont">
-      <ul>
-        <li>
-          <a class="featured" href="../projects/documents/2021Fall_MSFC_CentralAmericaDisasters_TechPaper_FD-final.docx" target="_blank">
-          <p>Download <b>Technical Paper</b></p>
-          </a>
-        </li>
-        <li>
-          <a class="featured" href="../projects/documents/2021Fall_MSFC_CentralAmericaDisasters_Presentation_FD-final.pptx" target="_blank">
-          <p>Download <b>Presentation</b></p>
-          </a>
-        </li>
-        <li>
-          <a class="featured" href="https://arcg.is/0PW1Wr" target="_blank">
-          <p>View <b>ArcGIS StoryMap</b></p>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  </div>
   </div>
   <!--- Section 5: Contact Information --->
   <div class="about_me_interests_cont_pg2">
