--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
           </a>
         </div> -->
         <div class="column">
-          <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
+          <a href="Projects/ESRI_MOOC_Hurricanes.html" target="">
             <div class="container">
               <img data-src="ESRI_CartographyMOOC_2024/Hurricanes.png" class="image">
               <div class="overlay">
-                <div class="grid_text">Mapping Hurricanes Since 1700s using ArcGIS Pro</div>
+                <div class="grid_text">Mapping Hurricanes Since 1851 using ArcGIS Pro</div>
               </div>
             </div>
           </a>
@@ -296,11 +296,11 @@
         <div class="row">
           <!-- Add your project columns here -->
           <div class="column">
-            <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
+            <a href="Projects/ESRI_MOOC_Hurricanes.html" target="">
               <div class="container">
                 <img data-src="ESRI_CartographyMOOC_2024/Hurricanes.png" class="image">
                 <div class="overlay">
-                  <div class="grid_text">Mapping Hurricanes Since 1700s using ArcGIS Pro</div>
+                  <div class="grid_text">Mapping Hurricanes Since 1851 using ArcGIS Pro</div>
                 </div>
               </div>
             </a>
