--- a/Projects/ESRI_MOOC_Hurricanes.html
+++ b/Projects/ESRI_MOOC_Hurricanes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Stephanie Willsey | Mapping Hurricanes Since the 1851</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="Styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
     <!--- Navigation Bar --->
@@ -129,23 +129,23 @@
       <br>
       <h2 style="font-family: 'Montserrat', sans-serif;">Contact</h2>
       <br>
-      <p>Please feel free to contact me at my email address or through my LinkedIn Account below.</p>
+      <p>Don't hesitate to contact me at my email address below to discuss all things forestry, remote sensing, GIS, and AI!</p>
       <br>
       <h2 style="font-family: 'Montserrat', sans-serif;">Email</h2>
       <br>
-      <p>cawilliams719@gmail.com</p>
+      <p>sephaniewillsey90@gmail.com</p>
       <br>
     </div>
   </div>
   <!--- Footer --->
   <div class="top_footer">
     <p style="font-size: 24px; font-family: 'Montserrat', sans-serif;">Contact Me</p>
-    <a href="https://www.linkedin.com/in/caroline-ann-williams/"><i class="fa fa-linkedin"></i></a>
-    <a href="https://github.com/cawilliams719"><i class="fa fa-github"></i></a>
+    <a href="www.linkedin.com/in/stephanie-willsey-08992274/"><i class="fa fa-linkedin"></i></a>
+    <a href="https://github.com/StephWill1"><i class="fa fa-github"></i></a>
   </div>
   <div class="bottom_footer">
-    <p><small>&copy; Copyright 2023, Caroline Williams</small></p>
+    <p><small>&copy; Copyright 2024, Stephanie Willsey</small></p>
   </div>
-  <script src="../scripts/icon.js"></script>
+  <script src="Scripts/icon.js"></script>
   </body>
 </html>
