--- a/Projects/ESRI_MOOC_Hurricanes.html
+++ b/Projects/ESRI_MOOC_Hurricanes.html
@@ -57,7 +57,7 @@
         <div class="project-tablet-right">
           <div class="project-tablet-text">
             <h2 style="text-align:center; padding-bottom: 15px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Central America Disasters Fall 2021 Project</h2>
-            <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Using Earth Observations and Qualitative Data to Map Global Hurricanes Since 1851</i></h3>
+          <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Using Earth Observations and Qualitative Data to Map Global Hurricanes Since 1851</i></h3>
           </div>
           <div class="button_buffer">
             <a class="button_blk" href="https://www.esri.com/arcgis-blog/products/arcgis-living-atlas/mapping/how-to-make-this-crazy-map-of-hurricanes-since-1851/">Project on ESRI Credit: John Nelson</a>
@@ -79,16 +79,11 @@
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Student:</b></p>
               <p>Stephanie Willsey</p>
             </div>
-            <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Affiliation:</b></p>
-              <p>ESRI</p>
             </div>
-          </div>
           <div class="about-right">
             <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Advisors:</b></p>
-              <p>Ken Field (Esri)</p>
-              <p>John Nelson (ESRI)</p>
+              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Affiliation:</b></p>
+              <p>Personal Project</p>
             </div>
           </div>
         </div>
@@ -97,6 +92,7 @@
   </div>
   </div>
   </div>
+  <!-- Tablet
   <!-- Tablet & Mobile -->
   <div class="tablet_device_1000px">
     <div class="grid_background_col">
@@ -112,16 +108,36 @@
               <p>ESRI</p>
             </div>
           </div>
-          <div class="about-right">
+         <div class="about-tablet-right">
             <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Advisors:</b></p>
-              <p>Ken Field (Esri)</p>
-              <p>John Nelson (ESRI)</p>
+              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Affiliation:</b></p>
+              <p>Personal Project</p>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
+   <!-- Section 4: Project Links -->
+  <div style="background-color: var(--alternative)">
+  <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
+  <div class="grid_background_col2">
+    <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Project Description:</b></p>
+    <p style="padding-bottom: 20px;">This project focused on the importance of symbology and projection in telling a story. By using the South Pole Stereographic projection and Firefly symbology increasing in size with hurricane severity provides a striking visualization.
+    </p>
+    <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>ArcGIS Pro YouTube Video:</b></p>
+    <div class="homepage_sect2_cont">
+      <ul>
+        <li>
+          <a class="featured" href="https://www.esri.com/arcgis-blog/products/arcgis-living-atlas/mapping/how-to-make-this-crazy-map-of-hurricanes-since-1851/" target="_blank">
+          <p>View <b>Using Earth Observations and Qualitative Data to Map Global Hurricanes Since 1851</b></p>
+          <p style="font-size:18px; font-style:italic;">* Please note that an ESRI account is required as well as local data downloads</p>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  </div>
   </div>
   <!--- Section 5: Contact Information --->
   <div class="about_me_interests_cont_pg2">
