--- a/Projects/ESRI_MOOC_Hurricanes.html
+++ b/Projects/ESRI_MOOC_Hurricanes.html
@@ -56,7 +56,7 @@
         </div>
         <div class="project-tablet-right">
           <div class="project-tablet-text">
-            <h2 style="text-align:center; padding-bottom: 15px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Central America Disasters Fall 2021 Project</h2>
+            <h2 style="text-align:center; padding-bottom: 15px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">ESRI Cartography MOOC 2024 Project</h2>
           <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Using Earth Observations and Qualitative Data to Map Global Hurricanes Since 1851</i></h3>
           </div>
           <div class="button_buffer">
