--- a/portfolio.html
+++ b/portfolio.html
@@ -48,9 +48,9 @@
   </div>
   <div class="portcolumn GIS remotesensing">
     <div class="portcontent">
-      <a href="Projects/Mapping-Burn-Scars-using-GEE.html" target="" class="port_txt">
-        <img src="images/wildfire_project_crop.jpg" alt="Mapping Burn Scars using Google Earth Engine JavaScript API" style="width:100%">
-        <h3 style="font-family: 'Montserrat', sans-serif;">Mapping Burn Scars using Google Earth Engine JavaScript API</h3>
+      <a href="Projects/ESRI_MOOC_Hurricanes.html" target="" class="port_txt">
+        <img src="ESRI_CartographyMOOC_2024/Hurricanes.png" alt="Mapping Hurricanes Since 1851 using ArcGIS Pro" style="width:100%">
+        <h3 style="font-family: 'Montserrat', sans-serif;">Mapping Hurricanes Since 1851 using ArcGIS Pro</h3>
       </a>
     </div>
   </div>
