--- a/Projects/ESRI_MOOC_Hurricanes.html
+++ b/Projects/ESRI_MOOC_Hurricanes.html
@@ -33,35 +33,35 @@
     <div class="desktop">
       <div class="about_cont">
         <div class="about-left">
-          <img src="ESRI_CartographyMOOC_2024/Hurricanes.png" class="project-image">
+          <img src="../images/wildfire_project_crop.jpg" class="project-image">
         </div>
         <div class="about-right">
           <div class="about-text">
-            <h2 style="text-align:center; padding-bottom: 5px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">ESRI Cartography MOOC 2024 Project</h2>
-            <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Using Earth Observations and Qualitative Data to Map Global Hurricanes Since 1851</i></h3>
+            <h2 style="text-align:center; padding-bottom: 5px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">Mapping Hurricanes Since 1851 using ArcGIS Pro</h2>
+          <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Using Earth Observations and Qualitative Data to Map Global Hurricanes Since 1851</i></h3>
           </div>
           <div class="button_buffer">
             <a class="button_blk" href="https://www.esri.com/arcgis-blog/products/arcgis-living-atlas/mapping/how-to-make-this-crazy-map-of-hurricanes-since-1851/">Project on ESRI Credit: John Nelson</a>
-          </div>
+           </div>
         </div>
       </div>
     </div>
     </div>
-    </div>
+  </div>
   <!-- Tablet & Mobile-->
     <div class="tablet_device_1000px">
       <div class="project_tablet_cont">
         <div class="project-tablet-left">
           <img src="ESRI_CartographyMOOC_2024/Hurricanes.png" class="project-tablet-image">
-        </div>
+       </div>
         <div class="project-tablet-right">
           <div class="project-tablet-text">
-            <h2 style="text-align:center; padding-bottom: 15px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">ESRI Cartography MOOC 2024 Project</h2>
+            <h2 style="text-align:center; padding-bottom: 5px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">Mapping Hurricanes Since 1851 using ArcGIS Pro</h2>
           <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Using Earth Observations and Qualitative Data to Map Global Hurricanes Since 1851</i></h3>
           </div>
           <div class="button_buffer">
             <a class="button_blk" href="https://www.esri.com/arcgis-blog/products/arcgis-living-atlas/mapping/how-to-make-this-crazy-map-of-hurricanes-since-1851/">Project on ESRI Credit: John Nelson</a>
-          </div>
+           </div>
         </div>
       </div>
     </div>
@@ -76,10 +76,10 @@
         <div class="about_cont">
           <div class="about-left">
             <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Student:</b></p>
+              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Team Members:</b></p>
               <p>Stephanie Willsey</p>
             </div>
-            </div>
+          </div>
           <div class="about-right">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Affiliation:</b></p>
@@ -94,21 +94,18 @@
   </div>
   <!-- Tablet
   <!-- Tablet & Mobile -->
+  <!-- Tablet & Mobile -->
   <div class="tablet_device_1000px">
     <div class="grid_background_col">
       <div class="proj-info-cont" style="text-align:left;">
         <div class="about_tablet_cont">
           <div class="about-tablet-left">
             <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Student:</b></p>
+              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Team Members:</b></p>
               <p>Stephanie Willsey</p>
-            </div>
-            <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Affiliation:</b></p>
-              <p>ESRI</p>
-            </div>
+             </div>
           </div>
-         <div class="about-tablet-right">
+          <div class="about-tablet-right">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Affiliation:</b></p>
               <p>Personal Project</p>
@@ -124,13 +121,13 @@
   <div class="grid_background_col2">
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Project Description:</b></p>
     <p style="padding-bottom: 20px;">This project focused on the importance of symbology and projection in telling a story. By using the South Pole Stereographic projection and Firefly symbology increasing in size with hurricane severity provides a striking visualization.
-    </p>
+     </p>
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>ArcGIS Pro YouTube Video:</b></p>
-    <div class="homepage_sect2_cont">
+     <div class="homepage_sect2_cont">
       <ul>
         <li>
           <a class="featured" href="https://www.esri.com/arcgis-blog/products/arcgis-living-atlas/mapping/how-to-make-this-crazy-map-of-hurricanes-since-1851/" target="_blank">
-          <p>View <b>Using Earth Observations and Qualitative Data to Map Global Hurricanes Since 1851</b></p>
+         <p>View <b>Using Earth Observations and Qualitative Data to Map Global Hurricanes Since 1851</b></p>
           <p style="font-size:18px; font-style:italic;">* Please note that an ESRI account is required as well as local data downloads</p>
           </a>
         </li>
